- Added option to set type of each varbind in nxsnmpset
- Fixed memory leak in PostgreSQL database driver
- New attributes "source" and "sourceId" in NXSL class "Event"
- New method toJson() in NXSL class "Event
- LVM monitoring parameters on AIX
- Added option to get normalized server thread pool load average
- Fixed bug in self-monitoring termplates
- Management console
        - Fixed possible deadlock when executing server script
        - Fixed area charts on dashboards
        - "Interactive" option for line chart dashboard elements
- Fixed issues: #1018, #1039, #1239, #1250


*
* 2.0.4
*

- New parameters in Linux platform subagent to get additional CPU information (frequency, model, etc.)
- Fixed bugs in LLDP based network topology discovery
- Correct notifications on threshold script errors
- Option to use last known value for cluster data aggregation in case of data collecion failure
- Added server configuration parameter to ignore syslog message timestamps and always use server time
- Added option to disconnect existing sessions of same user on login
- NXSL: implemented compound assignment operators and prefix increment/decrement for array elements
- NXSL: can access event parameters as event object attributes (like $event->$1 or $event->instance)
- Management console
	- Improved dashboard gauge widget
	- Added translucence option for dashboard line charts
	- Configurable display format for dashboard elements data sources
	- Improved inverted line chart support
	- DCI filter in DCI selection dialog
	- Configurable line width on ad-hoc line charts
	- Object tooltips in rack view
	- Line/area switch for all DCIs on chart level
- Android console
	- Reorganized alarm notification section (issue #1194)
- Fixed issues: #405, #775, #859, #984, #1086, #1112, #1186, #1194, #1195, #1196, #1197, #1200, #1209, #1210, #1214, #1223, #1227, #1231


*
* 2.0.3
*

- Additional parameters in Oracle subagent for redo logs and ASM monitoring